# biosafety

./: .env.example  .gitignore  ACCURATE_HOTSPOTS_UPDATE.md  AGENTS.md  BEFORE_AFTER_COMPARISON.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PRESENTATION_SLIDES_CONTENT.md  QUICK_START.md  README.md  TEMPERATURE_HEATMAP_SUMMARY.md  US_TEMPERATURE_HEATMAP_DOCUMENTATION.md  config.py  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  start.ps1  tsconfig.json
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
api/services/: prediction.py
data/processed/: dengue_weekly_clean.csv  ensemble_results.csv  eval_metrics.json  synthetic_dengue_weekly.csv
docs/: ACCURATE_HOTSPOTS_UPDATE.md  ENHANCEMENTS.md  IEEE_PAPER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_SLIDES_OUTLINE.md  QUICK_START.md  SESSION_CONTEXT.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: EnhancedMap.tsx  ErrorBoundary.tsx  LandingPage.tsx  Skeleton.tsx  Tooltip.tsx
frontend/src/tests/: App.test.tsx
frontend/src/types/: api.ts
models/: feature_cols.json  lstm_model_full.pt  lstm_scaler.pkl  xgb_clf.json
outputs/maps/: dengue_risk_map.html
scripts/: fetch_real_weather.py  generate_india_dataset.py  generate_us_temperature_heatmap.py  generate_us_temperature_heatmap_advanced.py  model_version.py  regenerate_features.py
src/: train.py
src/data/: generate_synthetic.py  preprocess.py
src/eval/: evaluate.py
src/features/: make_features.py
src/models/: ensemble.py  lstm_model.py  make_district_timeseries.py  make_live_geojson.py  train_lstm.py  train_xgb.py
src/viz/: heatmap.py
tests/: conftest.py  test_schemas.py
web/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json
web/src/: App.tsx  index.css
web/src/components/: EnhancedMap.tsx
web/src/tests/: App.test.tsx  ErrorBoundary.test.tsx
web/src/types/: api.ts  leaflet.heat.d.ts
